Bug 133186 - < and > in contact nicknames aren't well supported
Summary: < and > in contact nicknames aren't well supported
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-29 15:46 UTC by Yann LE HIR
Modified: 2007-06-09 04:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the balloon window (9.18 KB, image/png)
2006-08-29 16:00 UTC, Yann LE HIR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yann LE HIR 2006-08-29 15:46:29 UTC
Version:           SVN (using KDE KDE 3.5.4)
Installed from:    Gentoo Packages
Compiler:          gcc 3.4.6 (Gentoo 3.4.6-r1, ssp-3.4.5-1.0, pie-8.7.9) 
OS:                Linux

When someone with < and/or > in his nickname send me a message the balloon window doesn't correctly show the nickname

I have the same problem in the chat window whith kOne theme ( http://www.kde-look.org/content/show.php?content=36477 )

I'll post some screenshots
Comment 1 Yann LE HIR 2006-08-29 16:00:53 UTC
Created attachment 17552 [details]
Screenshot of the balloon window

The nickname should be © >†<ØñÐiñê>†<Mi§§ Chøµpïññette
Comment 2 Olivier Goffart 2006-08-29 16:32:43 UTC
What is your ckopete version ?
Can you try with Kopete 0.12.2 ?
I remember having fixed that issue already been fixed in the past.  But maybe it's a new one.
Comment 3 Yann LE HIR 2006-08-29 16:55:08 UTC
I have kopete SVN (the installation is 3 days old)

And it's with msn protocol, I did'nt try with other protocols.
Comment 4 Matt Rogers 2007-06-09 04:58:04 UTC
SVN commit 673127 by mattr:

fix bug 133186 by escaping the nickname text when passing it to the balloon.
For the kOne chat style, that would be a bug in the style since it works here
with the default Kopete style.

BUG: 133186



 M  +1 -1      systemtray.cpp  


--- branches/KDE/3.5/kdenetwork/kopete/kopete/systemtray.cpp #673126:673127
@@ -302,7 +302,7 @@
 
 			m_balloon = new KopeteBalloon(
 				i18n( "<qt><nobr><b>New Message from %1:</b></nobr><br><nobr>\"%2\"</nobr></qt>" )
-					.arg( msgFrom, msgText ), QString::null );
+					.arg( QStyleSheet::escape( msgFrom ), msgText ), QString::null );
 			connect(m_balloon, SIGNAL(signalBalloonClicked()), mBalloonEventList.first() , SLOT(apply()));
 			connect(m_balloon, SIGNAL(signalButtonClicked()), mBalloonEventList.first() , SLOT(apply()));
 			connect(m_balloon, SIGNAL(signalIgnoreButtonClicked()), mBalloonEventList.first() , SLOT(ignore()));