fix bug 133186 by escaping the nickname text when passing it to the balloon. For the kOne chat style, that would be a bug in the style since it works here with the default Kopete style.

BUG: 133186


svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=673127